[package]
name = "tyt_transfer_hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tyt_transfer_hook"
path = "src/lib.rs"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
spl-transfer-hook-interface = "0.6.5"
anchor-syn = "=0.31.0"
proc-macro2 = "1.0.95"
syn = "2.0.79"